style: small styling changes

--- a/src/components/bio/bio.css
+++ b/src/components/bio/bio.css
@@ -1,7 +1,7 @@
 @import "../../index.css";
 
 .bio {
-  padding-top: 10px;
+  padding: 10px 0 5px 0;
   color: var(--text-color);
-  font-size: calc(14 / 16 * 1rem);
+  font-size: calc(20 / 16 * 1rem);
 }
